Phase5/negative_tests/prog5.dlp
//Missing '(' ')'
while 2 < 3 {
    break;
}
return 0;